# organic-leadgen

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-blog.yml  publish.yml
blog/: hugo.toml
blog/content/posts/: ai-chatbots-triple-restaurant-reservations.md
docs/: NEXT_STEPS.md  SETUP.md  add_gui.md  status_and_gaps.md
docs/plans/: 2026-02-07-content-inbound-leadgen.md
lead-magnets/: vercel.json
lead-magnets/roi-calculator/: index.html  script.js  style.css
src/leadgen/: __init__.py  cli.py  config.py  content_generator.py  pipeline.py
src/leadgen/distributors/: __init__.py  postiz.py
src/leadgen/email/: __init__.py  convertkit.py
src/leadgen/prompts/: blog_post.txt  social_post.txt
src/leadgen/publishers/: __init__.py  devto.py  hashnode.py  hugo.py
src/leadgen/seo/: __init__.py  content_calendar.py  keywords.py
tests/: test_cli.py  test_content_generator.py  test_distributor_postiz.py  test_email_convertkit.py  test_pipeline.py  test_pipeline_distribute.py  test_publisher_devto.py  test_publisher_hashnode.py  test_publisher_hugo.py  test_seo_keywords.py
